--- a/notas-fiscais/.settings/org.eclipse.wst.common.component
+++ b/notas-fiscais/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="notas-fiscais">
+    <wb-module deploy-name="jsf-26-notas-fiscais">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="notas-fiscais"/>
-        <property name="java-output-path" value="/notas-fiscais/build/classes"/>
+        <property name="context-root" value="jsf-26-notas-fiscais"/>
+        <property name="java-output-path" value="/jsf-26-notas-fiscais/build/classes"/>
     </wb-module>
 </project-modules>
